--- a/src/Vista/Menu.fxml
+++ b/src/Vista/Menu.fxml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="280.0" style="-fx-background-color: RED; -fx-border-color: BLACK; -fx-border-width: 9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraMenu">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="71.0" layoutX="79.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" width="139.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="71.0" layoutX="79.0" layoutY="274.0" stroke="BLACK" strokeType="INSIDE" width="139.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="71.0" layoutX="79.0" layoutY="173.0" stroke="BLACK" strokeType="INSIDE" width="139.0" />
+      <Button fx:id="donaciones" layoutX="71.0" layoutY="165.0" mnemonicParsing="false" onAction="#abrirDonaciones" prefHeight="71.0" prefWidth="139.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="DONACIONES" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="20.0" />
+         </font></Button>
+      <Button fx:id="estadisticas" layoutX="71.0" layoutY="266.0" mnemonicParsing="false" onAction="#abrirEstadisticas" prefHeight="71.0" prefWidth="139.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="ESTADÍSTICAS" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="18.0" />
+         </font></Button>
+      <Button fx:id="donantes" layoutX="71.0" layoutY="64.0" mnemonicParsing="false" onAction="#abrirDonantes" prefHeight="71.0" prefWidth="139.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="DONANTES" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="20.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
-
