--- a/src/Vista/PantallaDonaciones.fxml
+++ b/src/Vista/PantallaDonaciones.fxml
@@ -1,8 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="671.0" style="-fx-background-color: red; -fx-border-color: black; -fx-border-width: 9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraDonaciones">
+   <children>
+      <TableView layoutX="121.0" layoutY="340.0" prefHeight="200.0" prefWidth="429.0" style="-fx-border-color: white; -fx-border-width: 6; -fx-background-color: black;">
+        <columns>
+          <TableColumn prefWidth="104.0" text="Código Donación" />
+          <TableColumn minWidth="1.0" prefWidth="99.0" text="Última Donación" />
+            <TableColumn prefWidth="55.0" text="Volumen" />
+            <TableColumn prefWidth="94.0" text="Tipo Sanguíneo" />
+            <TableColumn minWidth="0.0" prefWidth="63.0" text="Fecha" />
+        </columns>
+      </TableView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="253.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="454.0" layoutY="133.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="253.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="52.0" layoutY="133.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
+      <Button layoutX="245.0" layoutY="226.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Nuevo Donante" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="20.0" />
+         </font>
+      </Button>
+      <Button layoutX="44.0" layoutY="125.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Buscar por DNI" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="20.0" />
+         </font>
+      </Button>
+      <Button layoutX="245.0" layoutY="14.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Modificar Donante" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="19.0" />
+         </font>
+      </Button>
+      <Button layoutX="446.0" layoutY="125.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Borrar Donante" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="20.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
-
