--- a/src/Vista/PantallaDonaciones.fxml
+++ b/src/Vista/PantallaDonaciones.fxml
@@ -18,26 +18,26 @@
             <TableColumn minWidth="0.0" prefWidth="63.0" text="Fecha" />
         </columns>
       </TableView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="253.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="454.0" layoutY="133.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="253.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="52.0" layoutY="133.0" stroke="BLACK" strokeType="INSIDE" width="181.0" />
-      <Button layoutX="245.0" layoutY="226.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Nuevo Donante" textFill="WHITE">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="249.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="448.0" layoutY="132.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="250.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="52.0" layoutY="133.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
+      <Button fx:id="modificar" layoutX="242.0" layoutY="14.0" mnemonicParsing="false" onAction="#abrirModDonacion" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Modificar Donacion" textFill="WHITE">
          <font>
             <Font name="Impact" size="20.0" />
          </font>
       </Button>
-      <Button layoutX="44.0" layoutY="125.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Buscar por DNI" textFill="WHITE">
+      <Button layoutX="44.0" layoutY="125.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Buscar por Código" textFill="WHITE">
          <font>
             <Font name="Impact" size="20.0" />
          </font>
       </Button>
-      <Button layoutX="245.0" layoutY="14.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Modificar Donante" textFill="WHITE">
+      <Button layoutX="440.0" layoutY="124.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Borrar Donación" textFill="WHITE">
          <font>
-            <Font name="Impact" size="19.0" />
+            <Font name="Impact" size="20.0" />
          </font>
       </Button>
-      <Button layoutX="446.0" layoutY="125.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="181.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Borrar Donante" textFill="WHITE">
+      <Button fx:id="adir" layoutX="242.0" layoutY="226.0" mnemonicParsing="false" onAction="#abrirAnadirDonacion" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Nueva Donación" textFill="WHITE">
          <font>
             <Font name="Impact" size="20.0" />
          </font>
