Arreglada la parte estética del programa así como la conexión entre algunas ventanas

--- a/bin/Vista/Estadisticas.fxml
+++ b/bin/Vista/Estadisticas.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="227.0" prefWidth="585.0" style="-fx-background-color: F694AC; -fx-border-color: black; -fx-border-width: 9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraEstadisticas">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="227.0" prefWidth="585.0" style="-fx-background-color: #6fd7de; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraEstadisticas">
    <children>
       <Label layoutX="24.0" layoutY="30.0" text="Número total de donantes">
          <font>
