--- a/bin/Vista/PantallaDonaciones.fxml
+++ b/bin/Vista/PantallaDonaciones.fxml
@@ -3,44 +3,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="671.0" style="-fx-background-color: red; -fx-border-color: black; -fx-border-width: 9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraDonaciones">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="782.0" style="-fx-background-color: #6FD7DE; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraDonaciones">
    <children>
-      <TableView layoutX="121.0" layoutY="340.0" prefHeight="200.0" prefWidth="429.0" style="-fx-border-color: white; -fx-border-width: 6; -fx-background-color: black;">
+      <TableView layoutX="14.0" layoutY="275.0" prefHeight="265.0" prefWidth="754.0">
         <columns>
-          <TableColumn prefWidth="104.0" text="Código Donación" />
-          <TableColumn minWidth="1.0" prefWidth="99.0" text="Última Donación" />
-            <TableColumn prefWidth="55.0" text="Volumen" />
-            <TableColumn prefWidth="94.0" text="Tipo Sanguíneo" />
-            <TableColumn minWidth="0.0" prefWidth="63.0" text="Fecha" />
+          <TableColumn prefWidth="138.0" text="Código Donación" />
+          <TableColumn minWidth="1.0" prefWidth="165.0" text="Última Donación" />
+            <TableColumn prefWidth="126.0" text="Volumen" />
+            <TableColumn prefWidth="158.0" text="Tipo Sanguíneo" />
+            <TableColumn minWidth="0.0" prefWidth="166.0" text="Fecha" />
         </columns>
       </TableView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="249.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="448.0" layoutY="132.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="250.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="84.0" layoutX="52.0" layoutY="133.0" stroke="BLACK" strokeType="INSIDE" width="198.0" />
-      <Button fx:id="modificar" layoutX="242.0" layoutY="14.0" mnemonicParsing="false" onAction="#abrirModDonacion" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Modificar Donacion" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="44.0" layoutY="125.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Buscar por Código" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
-      <Button layoutX="440.0" layoutY="124.0" mnemonicParsing="false" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Borrar Donación" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
-      <Button fx:id="adir" layoutX="242.0" layoutY="226.0" mnemonicParsing="false" onAction="#abrirAnadirDonacion" prefHeight="84.0" prefWidth="198.0" style="-fx-background-color: black; -fx-border-color: white; -fx-border-width: 4;" text="Nueva Donación" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
+      <Button fx:id="add" layoutX="14.0" layoutY="152.0" mnemonicParsing="false" onAction="#abrirFormulario" prefHeight="69.0" prefWidth="149.0" text="Nueva Donación" />
+      <Button fx:id="modificar" layoutX="213.0" layoutY="152.0" mnemonicParsing="false" onAction="#abrirModDonacion" prefHeight="69.0" prefWidth="149.0" text="Modificar Donación" />
+      <Button fx:id="buscar" layoutX="619.0" layoutY="152.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="149.0" text="Buscar por Código" />
+      <Button fx:id="eliminar" layoutX="421.0" layoutY="152.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="149.0" text="Borrar Donación" />
+      <TextField fx:id="busqueda" layoutX="619.0" layoutY="235.0" />
    </children>
 </AnchorPane>
