--- a/src/Vista/AnadirDonacion.fxml
+++ b/src/Vista/AnadirDonacion.fxml
@@ -3,27 +3,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="423.0" style="-fx-background-color: red; -fx-border-color: black; -fx-border-width: 9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraAnadirDonacion">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="423.0" style="-fx-background-color: #6fd7de; -fx-border-width: 5; -fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraAnadirDonacion">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="49.0" layoutX="166.0" layoutY="333.0" stroke="BLACK" strokeType="INSIDE" width="108.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="49.0" layoutX="170.0" layoutY="269.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
-      <Button fx:id="buttonclose" layoutX="162.0" layoutY="261.0" mnemonicParsing="false" onAction="#cerrar" prefHeight="49.0" prefWidth="100.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="FIN" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font></Button>
       <TextField alignment="CENTER" layoutX="137.0" layoutY="61.0" promptText="CÓDIGO DONACIÓN" />
       <TextField alignment="CENTER" layoutX="137.0" layoutY="144.0" promptText="VOLUMEN: 0L" />
       <TextField alignment="CENTER" layoutX="137.0" layoutY="225.0" promptText="TIPO SANGRE" />
       <TextField alignment="CENTER" layoutX="137.0" layoutY="103.0" promptText="FECHA: DD/MM/YYYY" />
       <TextField alignment="CENTER" layoutX="120.0" layoutY="186.0" prefHeight="25.0" prefWidth="183.0" promptText="ÚLT. DONACIÓN: DD/MM/YYYY" />
-      <Button layoutX="158.0" layoutY="325.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="108.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="BORRAR" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
       <TextField alignment="CENTER" layoutX="138.0" layoutY="20.0" promptText="CÓDIGO DONANTE" />
+      <Button fx:id="buttonclose" layoutX="162.0" layoutY="261.0" mnemonicParsing="false" onAction="#addDonacion" prefHeight="49.0" prefWidth="100.0" text="Añadir" />
+      <Button layoutX="158.0" layoutY="325.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="108.0" text="Borrar" />
    </children>
 </AnchorPane>
