--- a/src/Vista/AnadirDonante.fxml
+++ b/src/Vista/AnadirDonante.fxml
@@ -4,16 +4,10 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: red; -fx-border-color: black; -fx-border-width: 9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraAnadirDonante">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #6fd7de; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraAnadirDonante">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="46.0" layoutX="28.0" layoutY="340.0" stroke="BLACK" strokeType="INSIDE" width="101.0" />
-      <Button layoutX="20.0" layoutY="333.0" mnemonicParsing="false" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="BORRAR" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font></Button>
       <TextField alignment="CENTER" layoutX="226.0" layoutY="28.0" promptText="NUMERO DONANTE" />
       <TextField alignment="CENTER" layoutX="77.0" layoutY="196.0" promptText="CP" />
       <TextField alignment="CENTER" layoutX="77.0" layoutY="168.0" promptText="EMAIL" />
@@ -27,12 +21,12 @@
       <TextField alignment="CENTER" layoutX="375.0" layoutY="112.0" promptText="POBLACION" />
       <TextField alignment="CENTER" layoutX="375.0" layoutY="84.0" promptText="PROVINCIA" />
       <TextField alignment="CENTER" layoutX="375.0" layoutY="56.0" promptText="DIRECCION" />
-      <RadioButton layoutX="405.0" layoutY="143.0" mnemonicParsing="false" text="H" textFill="WHITE">
+      <RadioButton layoutX="405.0" layoutY="143.0" mnemonicParsing="false" text="H">
          <font>
             <Font name="Impact" size="12.0" />
          </font>
       </RadioButton>
-      <RadioButton layoutX="466.0" layoutY="143.0" mnemonicParsing="false" text="M" textFill="WHITE">
+      <RadioButton layoutX="466.0" layoutY="143.0" mnemonicParsing="false" text="M">
          <font>
             <Font name="Impact" size="12.0" />
          </font>
@@ -41,17 +35,7 @@
       <TextField alignment="CENTER" layoutX="376.0" layoutY="224.0" promptText="TIPO RESIDENCIA" />
       <TextField alignment="CENTER" layoutX="363.0" layoutY="252.0" prefHeight="25.0" prefWidth="175.0" promptText="SITUACIÓN COMO DONANTE" />
       <TextField alignment="CENTER" layoutX="376.0" layoutY="168.0" promptText="CICLO" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="46.0" layoutX="258.0" layoutY="341.0" stroke="BLACK" strokeType="INSIDE" width="101.0" />
-      <Button layoutX="250.0" layoutY="333.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="101.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="FOTO" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="46.0" layoutX="488.0" layoutY="341.0" stroke="BLACK" strokeType="INSIDE" width="101.0" />
-      <Button fx:id="buttonclose" layoutX="482.0" layoutY="333.0" mnemonicParsing="false" onAction="#cerrar" prefHeight="46.0" prefWidth="101.0" style="-fx-background-color: BLACK; -fx-border-color: WHITE; -fx-border-width: 4;" text="FIN" textFill="WHITE">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Button>
+      <Button layoutX="20.0" layoutY="333.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="101.0" text="Borrar" />
+      <Button fx:id="buttonclose" layoutX="481.0" layoutY="333.0" mnemonicParsing="false" onAction="#addDonante" prefHeight="46.0" prefWidth="101.0" text="Añadir" />
    </children>
 </AnchorPane>
