--- a/src/Vista/Menu.fxml
+++ b/src/Vista/Menu.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="280.0" style="-fx-background-color: #6FD7DE;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraMenu">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="280.0" style="-fx-background-color: #6FD7DE; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraMenu">
    <children>
       <Button fx:id="donantes" layoutX="71.0" layoutY="64.0" mnemonicParsing="false" onAction="#abrirDonantes" prefHeight="71.0" prefWidth="139.0" text="Donantes" />
       <Button fx:id="donaciones" layoutX="71.0" layoutY="165.0" mnemonicParsing="false" onAction="#abrirDonaciones" prefHeight="71.0" prefWidth="139.0" text="Donaciones" />
